--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
     "dependencies": {
-      "axios": "^1.6.8",
-      "connect-session-sequelize": "^7.1.7",
-      "cors": "^2.8.5",
-      "ethers": "^6.11.1",
-      "express": "^4.19.2",
-      "express-session": "^1.18.0",
-      "logger": "^0.0.1",
-      "pg": "^8.11.5",
-      "postgresql": "^0.0.1",
-      "sequelize": "^6.37.2"
+        "axios": "^1.6.8",
+        "bcrypt": "^5.1.1",
+        "connect-session-sequelize": "^7.1.7",
+        "cors": "^2.8.5",
+        "ethers": "^6.11.1",
+        "express": "^4.19.2",
+        "express-session": "^1.18.0",
+        "logger": "^0.0.1",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
+        "pg": "^8.11.5",
+        "postgresql": "^0.0.1",
+        "sequelize": "^6.37.2"
     }
-  }
+}
