--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "dependencies": {
+        "@oasisprotocol/sapphire-hardhat": "^2.19.4",
+        "@oasisprotocol/sapphire-paratime": "^1.3.2",
         "axios": "^1.6.8",
         "bcrypt": "^5.1.1",
         "connect-session-sequelize": "^7.1.7",
@@ -13,5 +15,10 @@
         "pg": "^8.11.5",
         "postgresql": "^0.0.1",
         "sequelize": "^6.37.2"
+    },
+    "devDependencies": {
+        "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+        "@openzeppelin/contracts": "^5.0.2",
+        "hardhat": "^2.22.2"
     }
 }
