--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "sequelize": "^6.37.2"
     },
     "devDependencies": {
+        "@nomicfoundation/edr-linux-x64-gnu": "^0.3.4",
         "@nomicfoundation/hardhat-toolbox": "^5.0.0",
         "@openzeppelin/contracts": "^5.0.2",
         "hardhat": "^2.22.2"
